--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,7 @@
+  crqt-ng authors:
+Aleksey Chernov <valexlin@gmail.com>
+
+  CoolReader/cr3qt authors:
 Vadim Lopatin <coolreader.org@gmail.com>
 Aleksey Chernov <valexlin@gmail.com>
 Konstantin Potapov <pkbo@users.sourceforge.net>
