--- a/AUTHORS
+++ b/AUTHORS
@@ -5,17 +5,14 @@ Aleksey Chernov <valexlin@gmail.com>
 Vadim Lopatin <coolreader.org@gmail.com>
 Aleksey Chernov <valexlin@gmail.com>
 Konstantin Potapov <pkbo@users.sourceforge.net>
-ourairquality <info@ourairquality.org>
 EXL <exlmotodev@gmail.com>
-band-a-prend <torokhov-s-a@yandex.ru>
+ourairquality <info@ourairquality.org>
+Sergey Torokhov <torokhov-s-a@yandex.ru>
 Andy Mender <andymenderunix@gmail.com>
 Daniel Bedrenko <d.bedrenko@gmail.com>
-Balló György <ballogyor@gmail.com>
-Francesco Turco <fturco@fastmail.fm>
-Josh de Kock <josh@itanimul.li>
 Mihail Slobodyanuk <slobodyanukma@gmail.com>
-Sergey Torokhov <torokhov-s-a@yandex.ru>
 phi <crispyfrog@163.com>
-poire-z <poire-z@users.noreply.github.com>
+Olexandr Nesterenko <olexn@ukr.net>
 
-This list of authors is obtained using a script tools/getauthors/getauthos.sh
+  AppStream metadata file (for CoolReader)
+Balló György <ballogyor@gmail.com>
