--- a/ChangeLog
+++ b/ChangeLog
@@ -1,11 +1,51 @@
+2022-12-18  Aleksey Chernov  <valexlin@gmail.com>
+
+    * Version 1.0.1 released.
+    ==========================
+
+    Tag sources with `1.0.1'.
+
+    See below for changes.
+
+2022-12-18  Aleksey Chernov  <valexlin@gmail.com>
+
+    Update about dialog about hyphenation dictionaries.
+
+    Update source file header in cr3qt/: use the standard GPLv2+ header. File authors reconstructed.
+
+    Update _clang_format.sh: allow to specify clang-format executable in config file, header added with license information.
+
+    With the permission of the authors of the CoolReader project, the wording of the license has been changed to a clear "GPLv2 or later" in About dialog.
+
+2022-12-17  Aleksey Chernov  <valexlin@gmail.com>
+
+    With the permission of the authors of the CoolReader project, the wording of the license has been changed to a clear "GPLv2 or later".
+
+2022-09-21  Aleksey Chernov  <valexlin@gmail.com>
+
+    Update about dialog according with changes in crengine-ng-0.9.1.
+
+2022-07-15  Aleksey Chernov  <valexlin@gmail.com>
+
+    Update _clang_format.sh: support more variants of `find' utility.
+
+2022-07-15  Aleksey Chernov  <valexlin@gmail.com>
+
+    Added application specific properties names, that removed from crengine-ng-0.9.1
+
+2022-05-28  Aleksey Chernov  <valexlin@gmail.com>
+
+    Unrelated unit test call removed
+
+
 2022-02-10  Aleksey Chernov  <valexlin@gmail.com>
 
-	* Version 1.0.0 released.
-	==========================
+    * Version 1.0.0 released.
+    ==========================
 
-	Tag sources with `1.0.0'.
+    Tag sources with `1.0.0'.
 
-	See below for changes.
+    See below for changes.
 
 2022-02-06  Aleksey Chernov  <valexlin@gmail.com>
 
