--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,27 @@
+2022-12-31  Aleksey Chernov  <valexlin@gmail.com>
+
+    * Version 1.0.4 released.
+    ==========================
+
+    Tag sources with `1.0.4'.
+
+    See below for changes.
+
+2022-12-31  Aleksey Chernov  <valexlin@gmail.com>
+
+        About dialog: add info about `cmark` & `cmark-gfm`.
+
+        Use markdown.css for Markdown files (*.md)
+
+2022-12-30  Aleksey Chernov  <valexlin@gmail.com>
+
+        In the file open dialog, do not display file extensions that are disabled in the crengine-ng configuration.
+
+2022-12-25  Aleksey Chernov  <valexlin@gmail.com>
+
+        Update src/i18n/crqt_ru.ts: typo fixed
+
+
 2022-12-25  Aleksey Chernov  <valexlin@gmail.com>
 
     * Version 1.0.3 released.
