Update AUTHORS: added info about Dutch translator.

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,6 +1,9 @@
   crqt-ng authors:
 Aleksey Chernov <valexlin@gmail.com>
 
+  Dutch translation:
+Heimen Stoffels <vistausss@fastmail.com>
+
   CoolReader/cr3qt authors:
 Vadim Lopatin <coolreader.org@gmail.com>
 Aleksey Chernov <valexlin@gmail.com>
