Automatically run command when text is selected.

--- a/AUTHORS
+++ b/AUTHORS
@@ -16,6 +16,7 @@ Daniel Bedrenko <d.bedrenko@gmail.com>
 Mihail Slobodyanuk <slobodyanukma@gmail.com>
 phi <crispyfrog@163.com>
 Olexandr Nesterenko <olexn@ukr.net>
+Ren Tatsumoto <tatsu@autistici.org>
 
   AppStream metadata file (for CoolReader)
 Balló György <ballogyor@gmail.com>
