--- a/AUTHORS
+++ b/AUTHORS
@@ -1,6 +1,7 @@
   crqt-ng authors:
 Aleksey Chernov <valexlin@gmail.com>
 Ren Tatsumoto <tatsu@autistici.org>
+Sergey Alirzaev <l29ah@riseup.net>
 
   Dutch translation:
 Heimen Stoffels <vistausss@fastmail.com>
