fix(cr3widget): merge HiDPI fractional scaling fix from upstream
- Simplify _dpr initialization to 1.0 (actual value determined in paintEvent)
- Update _dpr dynamically when device pixel ratio changes during paint
- Resize docview when DPR changes to fix Wayland fractional scaling issue
- Remove redundant _dpr assignments from resizeTimerTimeout and processDelayedCommands
- Add Harvey Duong as contributor for HiDPI fix

--- a/AUTHORS
+++ b/AUTHORS
@@ -2,6 +2,7 @@
 Aleksey Chernov <valexlin@gmail.com>
 Ren Tatsumoto <tatsu@autistici.org>
 Sergey Alirzaev <l29ah@riseup.net>
+Harvey Duong <hduongd@gmail.com>
 
   Dutch translation:
 Heimen Stoffels <vistausss@fastmail.com>
